gitops/apps/development/podinfo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: apps
spec:
  parentRefs:
    - name: cloudlab
      namespace: envoy-gateway-system
  hostnames:
    - "podinfo.lab.christiaan.cloud"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
      - name: podinfo-blue
        port: 80
        weight: 100
      - name: podinfo-green
        port: 80
        weight: 0
